--- a/Working Group Vibe/GroupGrindr/GroupGrindr.csproj
+++ b/Working Group Vibe/GroupGrindr/GroupGrindr.csproj
@@ -165,5 +165,8 @@
   <ItemGroup>
     <Resource Include="Default_Images\budge1.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Default_Images\logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
